# MENA

./: CMakeLists.txt  package.xml  readme.md
launch/: empty_world.launch  spawn_rover.launch  start_gazebo.launch  start_world.launch  turtlebot3_empty_world.launch
models/: index.html
models/bed/: model.config  model.sdf
models/bench/: model.config  model.sdf
models/tv/: model.config  model.sdf
rviz/: pointcloud_mapping.rviz
scripts/: distance_measurement_node.py  lidar3Dwall_measurement.py  lidarListener.py  mappingRoom.py  move_insquare.py  pcdAnalyser,py  pose_orientation_node.py  publish_pcd.py  readimage.py  turtle_automovement.py  turtle_automovement1.py  turtle_move_laserscan.py
urdf/: VLP-16.urdf.xacro  notworkingrover.urdf.xacro  rover.urdf.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
worlds/: bedroom.world  circular_room.world  compartments_final.world  hexagon_room.world  hexagonal_room.world  irregularRoom.world  irregularshapeA.world  maze_world_a.world  maze_world_b.world  maze_world_c.world  octagon_room.world  octagonal_room.world  outerwalls.world  roomliving.world  simple_maze_room.world
